@@ -57,6 +57,7 @@ aarch64-tests: \
 	test0030-aarch64-binary \
 	test0031-aarch64-binary \
 	test0032-aarch64-binary \
+	test0033-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -100,6 +101,7 @@ amd64-tests: \
 	test0030-amd64-binary \
 	test0031-amd64-binary \
 	test0032-amd64-binary \
+	test0033-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -140,6 +142,7 @@ knight-posix-tests: \
 	test0030-knight-posix-binary \
 	test0031-knight-posix-binary \
 	test0032-knight-posix-binary \
+	test0033-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -204,6 +207,7 @@ armv7l-tests: \
 	test0030-armv7l-binary \
 	test0031-armv7l-binary \
 	test0032-armv7l-binary \
+	test0033-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -247,6 +251,7 @@ x86-tests: \
 	test0030-x86-binary \
 	test0031-x86-binary \
 	test0032-x86-binary \
+	test0033-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -290,6 +295,7 @@ riscv32-tests: \
 	test0030-riscv32-binary \
 	test0031-riscv32-binary \
 	test0032-riscv32-binary \
+	test0033-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -333,6 +339,7 @@ riscv64-tests: \
 	test0030-riscv64-binary \
 	test0031-riscv64-binary \
 	test0032-riscv64-binary \
+	test0033-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -440,6 +447,9 @@ test0031-riscv32-binary: M2-Planet | results
 
 test0032-riscv32-binary: M2-Planet | results
 	test/test0032/run_test.sh riscv32
+
+test0033-riscv32-binary: M2-Planet | results
+	test/test0033/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -564,6 +574,9 @@ test0031-riscv64-binary: M2-Planet | results
 test0032-riscv64-binary: M2-Planet | results
 	test/test0032/run_test.sh riscv64
 
+test0033-riscv64-binary: M2-Planet | results
+	test/test0033/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -686,6 +699,9 @@ test0031-aarch64-binary: M2-Planet | results
 
 test0032-aarch64-binary: M2-Planet | results
 	test/test0032/run_test.sh aarch64
+
+test0033-aarch64-binary: M2-Planet | results
+	test/test0033/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -810,6 +826,9 @@ test0031-amd64-binary: M2-Planet | results
 test0032-amd64-binary: M2-Planet | results
 	test/test0032/run_test.sh amd64
 
+test0033-amd64-binary: M2-Planet | results
+	test/test0033/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -923,6 +942,9 @@ test0031-knight-posix-binary: M2-Planet | results
 
 test0032-knight-posix-binary: M2-Planet | results
 	test/test0032/hello-knight-posix.sh
+
+test0033-knight-posix-binary: M2-Planet | results
+	test/test0033/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1104,6 +1126,9 @@ test0031-armv7l-binary: M2-Planet | results
 test0032-armv7l-binary: M2-Planet | results
 	test/test0032/run_test.sh armv7l
 
+test0033-armv7l-binary: M2-Planet | results
+	test/test0033/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1226,6 +1251,9 @@ test0031-x86-binary: M2-Planet | results
 
 test0032-x86-binary: M2-Planet | results
 	test/test0032/run_test.sh x86
+
+test0033-x86-binary: M2-Planet | results
+	test/test0033/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
