@@ -18,6 +18,7 @@
 ** Added
 Added support for `enum`s
 Added support for `const` on the left side of the type ("west const")
+Added support for forward declaration of `struct`s
 
 * 1.11 - 2023-11-01
 ** Added
